fixed white space under face button, mailto: implementation

--- a/src/components/Product/ProductCards/ProductCards.css
+++ b/src/components/Product/ProductCards/ProductCards.css
@@ -43,6 +43,7 @@
 
 #outerPic {
     width: 100%;
+    height: 100%;
 }
 
 #innerPic {
